<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="Scan Result:"
        android:textColor="@color/myellow"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_msg"
        android:text=""
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

        <Button
            android:id="@+id/btnStartScan"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/scanStart"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Scan Mode:"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNormal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="@string/scanNormalMode"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>

        <Button
            android:id="@+id/btnContinuous"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/scanContinuousMode"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>

    </LinearLayout>


    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Scan Power:"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEnableScan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/scanEnable"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>

        <Button
            android:id="@+id/btnDisableScan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/scanDisable"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_button"/>

    </LinearLayout>

</LinearLayout>